# backend

./: Makefile  pyproject.toml
.github/workflows/: python-app.yml
api/: main.py
pages/: index.html
