[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
fastapi = "^0.66.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
mkdocstrings = "^0.15.2"
mkdocs-material = "^7.1.10"
mkdocs = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
